[package]
name = "strider-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-compression = {version = "0.4.6", features = ["futures-io", "gzip"] }
poise = "0.6.1"
reqwest = { version = "0.11.24", features = ["json"] }
serde = "1.0.196"
serde_json = "1.0.113"
serde_urlencoded = "0.7.1"
serenity = "0.12.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
